@@ -15,6 +15,13 @@ our $VERSION = '0.59';
 sub transform_source {
     my ( $self, $source ) = @_;
 
+    # This bit of insanity is needed because if some other code calls
+    # Getopt::Long::Configure() to change some options, then everything can go
+    # to hell. Internally perltidy() tries to use Getopt::Long without
+    # resetting the configuration defaults, leading to very confusing
+    # errors. See https://rt.cpan.org/Ticket/Display.html?id=118558
+    Getopt::Long::ConfigDefaults();
+
     # perltidy reports errors in two different ways.
     # Argument/profile errors are output and an error_flag is returned.
     # Syntax errors are sent to errorfile or stderr, depending on the
